Fix overlap between map controls and label (fixes #883)
Conflicts:

	mapentity/static/mapentity/Leaflet.label

--- a/mapentity/static/mapentity/style.css
+++ b/mapentity/static/mapentity/style.css
@@ -692,7 +692,7 @@ TODO: please help;
     background-color: rgba(255,255,255,0.7);
     padding: 5px;
     border-radius: 5px;
-    top: 5px;
-    left: 5px;
+    top: 9px;
+    left: 48px;
     width: auto;
 }
